Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1513

SPDY plugin crashes on connection close

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.2
    • Plugins
    • None

    Description

      Following on from TS-1462,

      Conan Wang added a comment - 26/Sep/12 21:47

      About spdy test(on 3.2.x), request is not finished/closed normally after sending http header and body. I can see Chrome is hanging for a while (for seconds set in transaction_no_activity_timeout_in) before closing the connection(or session). When closing the connection, ATS will crash. (http://pastebin.com/kjAjkv3d)

      If I disable keep-alive, ATS will crash immediately after sending the response. (http://pastebin.com/nBxWieiB)

      Spdy request/response is done correctly. (http://pastebin.com/BRXzcJJr)

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: