TS-1513: SPDY plugin crashes on connection close

Fix TSVConn double-release on SPDY stream close.